maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: value update is not a member of plm.universe.Direction
if (getDirection()=Direction.NORTH) {
    ^